fix: align buttons in the modal window for creating a project

--- a/src/style.css
+++ b/src/style.css
@@ -59,7 +59,8 @@ dialog {
                 display: flex;
                 align-items: center;
                 gap: 1rem;
-                #comfirmBtn {
+                #comfirmBtn,
+                #comfirmBtnProject {
                     margin: 0;
                 }
             }
